--- a/views/book_reviews.hbs
+++ b/views/book_reviews.hbs
@@ -1,5 +1,5 @@
 {{#each reviews}}
-<div class="row border-bottom mt-3">
+<div class="row border-bottom mb-3">
     <div class="col">
         <div class="row">
             <div class="col">
