--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">
+            Books Home
+        </a>
+    </nav>
+    <div class="container mt-5">
         {{{body}}}
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
