--- a/views/book_detail.hbs
+++ b/views/book_detail.hbs
@@ -1,3 +1,8 @@
+<div class="row mb-5">
+    <div class="col">
+        <a href="/{{searchChar}}/{{pageNum}}">< Go Back</a>
+    </div>
+</div>
 <div class="row">
     <div class="col-3">
         <table>
