--- a/views/book_reviews.hbs
+++ b/views/book_reviews.hbs
@@ -1,3 +1,8 @@
+<div class="row mb-5">
+    <div class="col">
+        <a href="/{{searchChar}}/{{pageNum}}/{{bookid}}">< Go Back</a>
+    </div>
+</div>
 {{#each reviews}}
 <div class="row border-bottom mb-3">
     <div class="col">
