--- a/views/catelogue.hbs
+++ b/views/catelogue.hbs
@@ -1,3 +1,8 @@
+<div class="row mb-5">
+    <div class="col">
+        <a href="/">< Go Back</a>
+    </div>
+</div>
 <div class="row">
     <div class="col">
         <h3>Titles that starts with "{{searchChar}}"</h3>
