--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;"">
         <a class="navbar-brand" href="/">
-            Books Home
+            Bookstore Home
         </a>
     </nav>
     <div class="container mt-5 mb-5">
